# uv-lib

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml  prebuild.yml
src/uv_lib/: __init__.py
tests/: service_test.py
