[project]
name = "uv-lib"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mike Nacey", email = "mike-nacey@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["flask"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.4",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    'D', # pydocstyle
    'E', 'W', # pycodestyle
    'F', # pyflakes
    'I', # sorts imports
    'UP', # pyupgrade
    'RUF', # ruff's dev's own rules
    'SIM', # pyflakes simplicity
    'C90' # more complexity rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
